# exif_metadata_google_photo_takeout

./: .coverage  .gitignore  .repomixignore  CHECKLIST.MD  CORRECTION_SIGNATURES_FONCTION.md  LICENSE  README.md  README_NEW.md  REFACTOR_DEDUPLICATION_PLAN.md  REORGANIZATION_PLAN.md  SCRIPTS_README.md  SIDECAR_SAFETY_IMPLEMENTATION.md  TERMINOLOGY_UPDATE.md  WORKSPACE_FINAL_STATUS.md  astuces.md  clean_config_file.py  debug_discovered_config.json  debug_extraction.py  discovered_config.json  error_files.txt  ex.py  exif-struct.txt  failed_condition_files.txt  google_photos_processor.bat  google_photos_processor.ps1  pyproject.toml  repomix-output.md.txt  repomix.config.json  requirements.txt  temp_test.jpg_original  test_video_append_only_fix.py  updated_files.txt
.github/: copilot-instructions.md
.history/: .repomixignore_20250906093434  .repomixignore_20250906093441  .repomixignore_20250906093457  README_20250906072007.md  README_20250906073228.md  README_20250906093637.md  pyproject_20250906073409.toml  pyproject_20250906074949.toml  pyproject_20250906075234.toml  pytest_20250906072214.ini  test_albums_demo_20250906073308.sh  test_features_20250906071943.sh
archive/: doc_exiftool_full.txt  error_files.txt  unchanged_files.txt  updated_files.txt
config/: .env.example  debug_exif_mapping.json  exif_mapping.json  exif_mapping_clean.json  exif_mapping_old.json  exiftool_args_export.txt
docs/: FICHE_STRATEGIES_EXEMPLES.md  README.md  discovery.md  exiftool_commands.md  strategies.md
exiftool_test/: repomix-output.md.txt
experiments/: test1_read_with_a.py  (+7 more)
(+181 files in other folders)
